--- a/main.css
+++ b/main.css
@@ -1,13 +1,13 @@
 #container {
-	margin: 0 auto;
 	width: 100%;
 	padding-bottom: 75%;
+	overflow: hidden;
 }
 
 #container img {
 	position: absolute;
-	max-width:100%;
-	max-height:100%;
+	max-width:10%;
+	width: auto;
+	resize: both;
 	top: 0; bottom: 0; left: 0; right: 0;
-	opacity: 0;
 }
