--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+html, body {
+ margin: 0;
+ padding: 0; 
+ border: 0;
+}
+
 #container {
 	width: 100%;
 	padding-bottom: 75%;
@@ -5,9 +11,10 @@
 }
 
 #container img {
+	border: 0;
 	position: absolute;
-	max-width:10%;
+	max-width: 15%;
 	width: auto;
-	resize: both;
 	top: 0; bottom: 0; left: 0; right: 0;
+	opacity: 0;
 }
